--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-
+<h1>quote of the day:/h1>
+  <br>
+  <img src="https://cdn.discordapp.com/attachments/1010995614881959966/1028408026413150218/unknown.png">
