--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <center>
-<h1>quote of the day:</h1>
+  <h1>welcome to the hall of chings retarded behavior</h1>
+  <br>
+<h2>quote of the day:</h2>
   <br>
   <img src="https://cdn.discordapp.com/attachments/1010995614881959966/1028408026413150218/unknown.png">
   </center>
