--- a/index.html
+++ b/index.html
@@ -4,4 +4,12 @@
 <h2>quote of the day:</h2>
   <br>
   <img src="https://cdn.discordapp.com/attachments/1010995614881959966/1028408026413150218/unknown.png">
+  <ul>
+    <a href="/videos">videos</a>
+  <ul>
+        <a href="/chatlogs">chatlogs</a>
+  <ul>
+        <a href="/trusted">trusted people who r friends with ching</a>
+  <ul>
+  
   </center>
