--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
+<html>
+
+<head>
+<title>hall of ching</title>
+</head>
+
+<body bgcolor=#000000 text=#000000 link=#000000 vlink=#000000 alink=#000000>
 <center>
   <h1>welcome to the hall of chings retarded behavior</h1>
   <hr>
 <h2>quote of the day:</h2>
   <br>
   <img src="https://cdn.discordapp.com/attachments/1010995614881959966/1028408026413150218/unknown.png">
-  <ul>
+  <br><br>
     <a href="/videos">videos</a>
-  <ul>
-        <a href="/chatlogs">chatlogs</a>
-  <ul>
-        <a href="/trusted">trusted people who r friends with ching</a>
-  <ul>
+  <br>
+    <a href="/chatlogs">chatlogs</a>
+  <br>
+    <a href="/trusted">trusted people who r friends with ching</a>
+  </br>
   
   </center>
