--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>hall of ching</title>
 </head>
 
-<body bgcolor=#000000 text=#000000 link=#000000 vlink=#000000 alink=#000000>
+<body bgcolor=#ffffff text=#000000 link=#000000 vlink=#000000 alink=#000000>
 <center>
   <h1>welcome to the hall of chings retarded behavior</h1>
   <hr>
